--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -2,14 +2,14 @@ spring.application.name=customer
 server.port=8001
 
 #DB
-# ???????????? ??????????? ?? ???? ????? PostgreSQL
+# PostgreSQL SERVER on localhost:5432 WITH DataBASE - customer
 spring.datasource.url=jdbc:postgresql://localhost:5432/customer
 spring.datasource.username=its
 spring.datasource.password=password
 
 # ???????????? JPA (Hibernate)
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
