--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=password
 
 # ???????????? JPA (Hibernate)
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
