--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+rabbitmq.exchanges.internal=internal.exchange
+rabbitmq.queues.notification=notification.queue
+rabbitmq.routing-keys.internal-notification=internal.notification.routing-key
+
+
